--- a/Rendu/Rendu Lundi 21 novembre 2022/index.html
+++ b/Rendu/Rendu Lundi 21 novembre 2022/index.html
@@ -15,8 +15,8 @@
     <link rel="icon" type="image/png" sizes="180x180" href="assets/img/apple-touch-icon.png?h=bece26e57308b3917ed22eaa8b1d68a5">
     <link rel="icon" type="image/png" sizes="192x192" href="assets/img/android-chrome-192x192.png?h=f76bab0da465119a2b1b405e0cd70a8b">
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/android-chrome-512x512.png?h=b22129d1a717362967301796674a83b1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=025df1ec88740cad5ff14bb3380da6dd">
+    <link rel="stylesheet" href="assets/css/aos.min.css?h=ea67d3638a91cd05d22f1b4e31c7b746">
     <link rel="stylesheet" href="assets/css/iframe.css?h=f1bd603fd7fa8b679e348be3cc841088">
 </head>
 
@@ -122,8 +122,8 @@
             </div>
         </div>
     </footer><!-- End: Footer Clean -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js?h=981245863c383366a329259d02b8172c"></script>
+    <script src="assets/js/aos.min.js?h=d3718e34eeb0355be8e3179a2e2bccb7"></script>
     <script src="assets/js/bs-init.js?h=d0c6de1d0ecd5065d55e7b94664b5b10"></script>
 </body>
 
