Update Mercredi matin

--- a/Projet 5/Kickoff/Site a modifier/index.html
+++ b/Projet 5/Kickoff/Site a modifier/index.html
@@ -314,6 +314,7 @@
 						<div class="question">
 							<label for="username">Nom :</label>
 							<input type="text" placeholder="Jean-Luc" id="name" />
+							<small>Error message</small>
 						</div>
 						<div class="question">
 							<label for="username">Email :</label>
