--- a/Projet 5/Modification pour site final/index.html
+++ b/Projet 5/Modification pour site final/index.html
@@ -5,7 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 		<title>Assassin's Creed Presentation</title>
 		<meta property="og:type" content="website" />
-		<meta name="" content="" />
 		<meta
 			name="description"
 			content="Ce site vient présenter la saga des jeux Assassin's Creed développer par Ubisoft. Vous pourrez retrouver une introduction sur le scénario global de la saga et le gameplay des jeu."
@@ -62,6 +61,10 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
 		/>
 		<link rel="stylesheet" href="assets/css/iframe.css?h=f1bd603fd7fa8b679e348be3cc841088" />
+		<link
+			rel="stylesheet"
+			href="/Projet_4-5/Projet 5/Modification pour site final/css/style.css"
+		/>
 	</head>
 
 	<body
@@ -368,7 +371,7 @@ Entrez votre message ici !
 			</div>
 		</footer>
 		<!-- End: Footer Clean -->
-		<script src="/Projet_4-5/Projet 5/Kickoff/Site a modifier/form.js"></script>
+		<script src="/Projet_4-5/Projet 5/Modification pour site final/js/form.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 		<script src="assets/js/bs-init.js?h=67ee20cf4e5150919853fca3720bbf0d"></script>
