--- a/Projet 5/Modification pour site final/index.html
+++ b/Projet 5/Modification pour site final/index.html
@@ -48,7 +48,7 @@
 		/>
 		<link
 			rel="stylesheet"
-			href="assets/bootstrap/css/bootstrap.min.css?h=025df1ec88740cad5ff14bb3380da6dd"
+			href="/Projet_4-5/Projet 5/Modification pour site final/assets/bootstrap/css/bootstrap.min.css"
 		/>
 		<link
 			rel="stylesheet"
@@ -210,9 +210,9 @@
 							<img
 								class="w-100 d-block"
 								alt="Tous les assassins des différents jeux"
-								src="assets/img/1.webp?h=16b72be2ed29375e68d5a034c1aab9b7"
+								src="/Projet_4-5/Projet 5/Modification pour site final/img/1_bis.webp"
 								loading="eager"
-								width="1116px"
+								width="1296px"
 								height="627px"
 							/>
 						</div>
