Réparation des sources

--- a/Rendu/Rendu Vendredi 24 novembre 2022/index.html
+++ b/Rendu/Rendu Vendredi 24 novembre 2022/index.html
@@ -46,10 +46,7 @@
 			sizes="512x512"
 			href="assets/img/android-chrome-512x512.png?h=b22129d1a717362967301796674a83b1"
 		/>
-		<link
-			rel="stylesheet"
-			href="/Projet_4-5/Projet 5/Modification pour site final/assets/bootstrap/css/bootstrap.min.css"
-		/>
+		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
 		<link
 			rel="stylesheet"
 			href="assets/css/Playfair%20Display.css?h=2f5ff27be46716df76dd8dabd724471d"
@@ -61,13 +58,15 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
 		/>
 		<link rel="stylesheet" href="assets/css/iframe.css?h=f1bd603fd7fa8b679e348be3cc841088" />
-		<link
-			rel="stylesheet"
-			href="/Projet_4-5/Projet 5/Modification pour site final/css/style.css"
-		/>
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 
-	<body>
+	<body
+		style="
+			background: url('assets/img/Background_AC_final.webp') center / cover no-repeat fixed;
+			margin-top: 50px;
+		"
+	>
 		<!-- Start: Navbar Centered Links -->
 		<nav
 			class="navbar navbar-light navbar-expand-md py-3 fixed-top"
@@ -210,7 +209,7 @@
 							<img
 								class="w-100 d-block"
 								alt="Tous les assassins des différents jeux"
-								src="/Projet_4-5/Projet 5/Modification pour site final/img/1_bis.webp"
+								src="assets/img/1.webp"
 								loading="eager"
 								width="1296px"
 								height="627px"
@@ -220,7 +219,7 @@
 							<img
 								class="w-100 d-block"
 								alt="Image de déplacement sur les toits en jeu"
-								src="assets/img/2.webp?h=5febe685e6aadfb31017ec5dffe489dd"
+								src="assets/img/2.webp"
 								loading="eager"
 								width="1920px"
 								height="960px"
@@ -229,7 +228,7 @@
 						<div class="carousel-item">
 							<img
 								class="w-100 d-block"
-								src="assets/img/AC-combat.webp?h=049c73266148b0f72469958cbcc8290b"
+								src="assets/img/AC-combat.webp"
 								alt="Image de combat en jeu"
 								loading="eager"
 								width="2000px"
@@ -239,7 +238,7 @@
 						<div class="carousel-item">
 							<img
 								class="w-100 d-block"
-								src="assets/img/4.webp?h=1d6c8aeadd741f5601e98bdeb2da732c"
+								src="assets/img/4.webp"
 								alt="Illustration saut de la foi"
 								loading="eager"
 								width="1920px"
@@ -380,7 +379,7 @@
 			</div>
 		</footer>
 		<!-- End: Footer Clean -->
-		<script src="/Projet_4-5/Projet 5/Modification pour site final/js/form.js"></script>
+		<script src="js/form.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 		<script src="assets/js/bs-init.js?h=67ee20cf4e5150919853fca3720bbf0d"></script>
